--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
 				<p>Настройка коммутаторов и маршрутизаторов.</p>
 				<p>Цель данной работы:</p>
 				<p>Ознакомиться с принципами работы компьютерных сетей, базовой настройкой сетевого оборудования и статической маршрутизацией.</p>
-			
-				
-				
+			<div class = "post">
+				<div class="date">Билет <span>1</span></div>
+				<p>Модели и технологии организации гибкой (agile) разработки программных средств.</p>
+				<p>Понятие браузера. Возможности и технологии управления объектной моделью документа (DOM).<p>
 
 		
 	</body>
