--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<div class="container">
 						<article id="main" class="special">
 							<header>
-								<h2><a href="#">Бондарчук Сергей Сергей</a></h2>
+								<h2><a href="#">Бондарчук Сергей</a></h2>
 								<p>
 									Личная страница
 								</p>
@@ -61,7 +61,20 @@
 							</p>
 							</section>
 			
-					
+							<section>
+							<a href="#" class="image featured"><img src="images/photo_2018-11-10_20-12-42.jpg" alt="" /></a>
+							<h3>
+							</h3>
+							<!--BODY-->
+							<h3 id="L1" align = center>Лабораторная работа №2 "Разработка простого веб-приложения"</h3>
+							<p>Проектирование и разработка индивидуального или коллективного веб-приложения с использованием html,css,js + json,xml.
+							<p>1)Собрать команду для разработки веб-приложения (SPA) и распределить роли. 
+							<p>2)Сделать разметку страницы по макету. Макет страницы. Исходный код на index.html.
+							<p>3)Прописать стили страницы. Исходный код на css.
+							<p>4)Прописать js функционал и реализовать возможность чтения json.Исходный код на js и json
+							<cite>Результат:<a>Готовый проект</a></cite>
+							</p>
+							</section>
 								<header>
 									<h3>Ultrices tempor sagittis nisl</h3>
 								</header>
