--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
 							<a href="#" class="image featured"><img src="images/photo_2018-11-10_20-12-42.jpg" alt="" /></a>
 							<h3>
 							</h3>
-							<!--BODY-->
 							<h3 id="L1" align = center>Лабораторная работа №2 "Разработка простого веб-приложения"</h3>
 							<p>Проектирование и разработка индивидуального или коллективного веб-приложения с использованием html,css,js + json,xml.
 							<p>1)Собрать команду для разработки веб-приложения (SPA) и распределить роли. 
@@ -74,23 +73,17 @@
 							<p>4)Прописать js функционал и реализовать возможность чтения json.Исходный код на js и json
 							<cite>Результат:<a>Готовый проект</a></cite>
 							</p>
-							</section>
-								<header>
-									<h3>Ultrices tempor sagittis nisl</h3>
-								</header>
-								<p>
-									Nascetur volutpat nibh ullamcorper vivamus at purus. Cursus ultrices porttitor sollicitudin imperdiet
-									at pretium tellus in euismod a integer sodales neque. Nibh quis dui quis mattis eget imperdiet venenatis
-									feugiat. Neque primis ligula cum erat aenean tristique luctus risus ipsum praesent iaculis. Fermentum elit
-									fringilla consequat dis arcu. Pellentesque mus tempor vitae pretium sodales porttitor lacus. Phasellus
-									egestas odio nisl duis sociis purus faucibus morbi. Eget massa mus etiam sociis pharetra magna.
-								</p>
-								<p>
-									Eleifend auctor turpis magnis sed porta nisl pretium. Aenean suspendisse nulla eget sed etiam parturient
-									orci cursus nibh. Quisque eu nec neque felis laoreet diam morbi egestas. Dignissim cras rutrum consectetur
-									ut penatibus fermentum nibh erat malesuada varius.
-								</p>
-							</section>
+								<h3 id="L1" align = center>Лабораторная работа №3 "Настройка локальной сети передачи данных".</h2>
+				<p>Настройка коммутаторов и маршрутизаторов.</h3>
+							<p>Цель данной работы:
+							<p>Ознакомиться с принципами работы компьютерных сетей, базовой настройкой сетевого оборудования и статической маршрутизацией.
+							<div class = "post">
+							<p>1)Собрать команду для разработки веб-приложения (SPA) и распределить роли. 
+							<p>2)Сделать разметку страницы по макету. Макет страницы. Исходный код на index.html.
+							<p>3)Прописать стили страницы. Исходный код на css.
+							<p>4)Прописать js функционал и реализовать возможность чтения json.Исходный код на js и json
+							<cite>Результат:<a>Готовый проект</a></cite>
+							</p>
 							<section>
 								<header>
 									<h3>Augue euismod feugiat tempus</h3>
