--- a/index.html
+++ b/index.html
@@ -81,17 +81,11 @@
 							<p>4)Прописать js функционал и реализовать возможность чтения json.Исходный код на js и json
 							<cite>Результат:<a>Готовый проект</a></cite>
 							</p>
-							<section>
-								<header>
-									<h3>Augue euismod feugiat tempus</h3>
-								</header>
-								<p>
-									Pretium tellus in euismod a integer sodales neque. Nibh quis dui quis mattis eget imperdiet venenatis
-									feugiat. Neque primis ligula cum erat aenean tristique luctus risus ipsum praesent iaculis. Fermentum elit
-									ut nunc urna volutpat donec cubilia commodo risus morbi. Lobortis vestibulum velit malesuada ante
-									egestas odio nisl duis sociis purus faucibus morbi. Eget massa mus etiam sociis pharetra magna.
-								</p>
-							</section>
+							<h3 id="L1" align = center>Билет 1</h2>
+								<p>Модели и технологии организации гибкой (agile) разработки программных средств.</p>
+								<p>Понятие браузера. Возможности и технологии управления объектной моделью документа (DOM).
+							</p>
+							
 						</article>
 						
 							<article class="col-4 col-12-mobile special">
