--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
-	<body 
+	<body>
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -38,7 +38,7 @@
 					<div class="container">
 						<article id="main" class="special">
 							<header>
-								<h2><a href="#">Бондарчук Сергей</a></h2>
+								<h2><a>Бондарчук Сергей</a></h2>
 								<p>
 									Личная страница
 								</p>
@@ -53,10 +53,10 @@
 							<h3 id="L1" align = center>Лабораторная работа №1 "Экосистема разработки программ с открытым кодом"</h3>
 							<p>1) Пройти регистрацию на сайте GitHub.
 							<p>2) Получить доступ к репозиторию.
-							<a href = "https://github.com/BondarchukS"><p>3) Создать личную страницу</a>
-							<p>4) Создать персональную веб страницу-отчет с использованием html, css, js. Персональная страница-отчет. 
-								Исходный код на index.html и css.
-							<p>5) Загрузить персональную веб страницу-отчет в репозиторий 
+							<a href = "https://github.com/BondarchukS"><p>3)Создать личную страницу</a>
+								<p>4) Создать персональную веб страницу-отчет с использованием html, css, js. Персональная страница-отчет.
+								Исходный код на <a href="https://github.com/BondarchukS/Bondarchuks.github.io/blob/master/index.html">index.html</a> и <a href="https://github.com/BondarchukS/Bondarchuks.github.io/tree/master/assets/css">css</a>.
+							<p>5) Загрузить персональную веб страницу-отчет <a href="https://github.com/BondarchukS/inet-2018/tree/master/IDM-18-02"> в репозиторий </a>
 								ИДМ-17 по курсу "Интернет-технологии" на GitHub.
 							</p>
 							</section>
