--- a/index.html
+++ b/index.html
@@ -65,33 +65,27 @@
 							<h3 id="L2" align = center>Лабораторная работа №2 "Разработка простого веб-приложения"</h3>
 							<p>Проектирование и разработка индивидуального или коллективного веб-приложения с использованием html,css,js + json,xml.
 							<p>1)Собрать команду для разработки веб-приложения (SPA) и распределить роли. 
-							<p>2)Сделать разметку страницы по макету. Макет страницы. Исходный код на index.html.
+							<p>2)Исходный код на index.html.
 							<p>3)Прописать стили страницы. Исходный код на css.
 							<p>4)Прописать js функционал и реализовать возможность чтения json.Исходный код на js и json
 							<cite>Результат:<a>Готовый проект</a></cite>
 							</p>
+
 								<h3 id="L3" align = center>Лабораторная работа №3 "Настройка локальной сети передачи данных".</h2>
 				<p>Настройка коммутаторов и маршрутизаторов.</h3>
-							<p>Цель данной работы:
-							<p>Ознакомиться с принципами работы компьютерных сетей, базовой настройкой сетевого оборудования и статической маршрутизацией.
-							<div class = "post">
-							<p>1)Собрать команду для разработки веб-приложения (SPA) и распределить роли. 
-							<p>2)Сделать разметку страницы по макету. Макет страницы. Исходный код на index.html.
-							<p>3)Прописать стили страницы. Исходный код на css.
-							<p>4)Прописать js функционал и реализовать возможность чтения json.Исходный код на js и json
-							<cite>Результат:<a>Готовый проект</a></cite>
-							</p>
-							<h3 id="L1" align = center>Билет 1</h2>
-								<p>Модели и технологии организации гибкой (agile) разработки программных средств.</p>
-								<p>Понятие браузера. Возможности и технологии управления объектной моделью документа (DOM).
-							</p>
+							<p>Расчет диапазонов подсетей</p>
+							<a href="#" class="image featured"><img src="laba3/im1web.png" alt="" /></a> 
+
 							
 						</article>
 						
 							<article class="col-4 col-12-mobile special">
-								<!--<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a> -->
+								<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a> 
 								<header>
 									<h3><a href="#">Заглушка</a></h3>
+									<div class="col-6">
+										<a href="#" class="image fit"><img src="images/pic10.jpg" alt="" /></a>
+									</div>
 								</header>
 								<p>
 									Заглушка
