--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
 											<p>5) Добавить на рабочее поле еще один коммутатор с двумя компьютерами и настроить адресацию из другой подсети</p>
 											<a href="#" class="image featured"><img src="laba3/im6web.png" alt="" /></a>
 											<a href="#" class="image featured"><img src="laba3/im7web.png" alt="" /></a>
+											<a href="#" class="image featured"><img src="laba3/im8web.png" alt="" /></a>
+											<p>6) Соединить коммутаторы между собой и проверить работоспособность сети</p>
+											<a href="#" class="image featured"><img src="laba3/im9web.png" alt="" /></a>
 										</article>
 				</article>
 
