--- a/index.html
+++ b/index.html
@@ -93,46 +93,73 @@
 											<a href="#" class="image featured"><img src="laba3/im4web.png" alt="" /></a>
 											<p>4) Выполнить проверку работоспособности сети</p>
 											<a href="#" class="image featured"><img src="laba3/im5web.png" alt="" /></a>
-											<p>5) Добавить на рабочее поле еще один коммутатор с двумя компьютерами и настроить адресацию из другой подсети</p>
+											<p>5) Добавить на рабочее поле еще один коммутатор с двумя компьютерами и настроить адресацию из другой
+												подсети</p>
 											<a href="#" class="image featured"><img src="laba3/im6web.png" alt="" /></a>
 											<a href="#" class="image featured"><img src="laba3/im7web.png" alt="" /></a>
 											<a href="#" class="image featured"><img src="laba3/im8web.png" alt="" /></a>
 											<p>6) Соединить коммутаторы между собой и проверить работоспособность сети</p>
 											<a href="#" class="image featured"><img src="laba3/im9web.png" alt="" /></a>
-										</article>
-				</article>
+											<p>7) В случае неработоспособности сети объяснить причин</p>
+											<p>8) Добавить маршрутизатор на рабочее поле</p>
+											<a href="#" class="image featured"><img src="laba3/im10web.png" alt="" /></a>
+											<p>9) Настроить интерфейсы маршрутизатора для существующих подсетей</p>
+											<a href="#" class="image featured"><img src="laba3/im11web.png" alt="" /></a>
+											<p>10) Проверить работоспособность сети</p>
+											<a href="#" class="image featured"><img src="laba3/im12web.png" alt="" /></a>
+											<p>11) В случае неработоспособности сети объяснить причины</p>
+											<p>12) Указать шлюз по умолчанию и отправить сообщение</p>
+											<p>13) Добавить на рабочее поле еще один маршрутизатор</p>
+											<a href="#" class="image featured"><img src="laba3/im13web.png" alt="" /></a>
+											<p>14) Подключить к нему коммутатор и компьютер</p>
+											<a href="#" class="image featured"><img src="laba3/im14web.png" alt="" /></a>
+											<p>15)Настроить сетевые настройки согласно таблице ниже</p>
+											<a href="#" class="image featured"><img src="laba3/im15web.png" alt="" /></a>
+											<p>16) Соединить между маршрутизаторы и настроить между ними сеть с префиксом /30</p>
+											<a href="#" class="image featured"><img src="laba3/im16web.png" alt="" /></a>
+											<p>17) Проверить работоспособность сети, отправив сообщение сети A в сеть С и из сети В в сеть С</p>
+											<a href="#" class="image featured"><img src="laba3/im17web.png" alt="" /></a>
+											<p>18) В случае неработоспособности сети объяснить причины</p>
+											<p>19) Настроить статическую маршрутизацию между сетями</p>
+											<a href="#" class="image featured"><img src="laba3/im18web.png" alt="" /></a>
+											<p>20) Настроить на сетевых устройствах пароли для привилегированного режима</p>
+											<a href="#" class="image featured"><img src="laba3/im19web.png" alt="" /></a>
+											<p>21) Настроить пароли на сетевых устройствах пароли на подключение через консоль и telnet</p>
+											<a href="#" class="image featured"><img src="laba3/im20web.png" alt="" /></a>
+											<p>22) Установить баннер на сетевое оборудование</p>
+											<a href="#" class="image featured"><img src="laba3/im22web.png" alt="" /></a>
+											<p>23) Проверить работу удаленного подключения</p>
+											<a href="#" class="image featured"><img src="laba3/im23web.png" alt="" /></a>
 
+											
 
+								</article> </article> </div> </div>
+												
+											 <!-- Footer -->
+											<!-- Contact -->
+											<section class="contact">
+												<header>
+													<h3>Понравился сайт?</h3>
+												</header>
+												<p>Свяжитесь со мной:</p>
+												<ul class="icons">
+													<li><a href="https://github.com/BondarchukS" class="icon fa-github"><span class="label"></span></a></li>
+													<li><a href="https://t.me/BondarchukSS" class="icon fa-telegram"><span class="label"></span></a></li>
+													<li><a href="tel:+79619313413"><span class="label"></span>Позвонить</a></li>
+												</ul>
+											</section>
+
+											<!-- Copyright -->
+											<div class="copyright">
+												<ul class="menu">
+													<li>&copy; ИДБ-18-02. All rights reserved.</li>
+													<li>Design by: Бондарчук Сергей на основе <a href="http://html5up.net">HTML5 UP</a></li>
+												</ul>
+											</div>
 
 			</div>
 
 		</div>
-
-		<!-- Footer -->
-		<!-- Contact -->
-		<section class="contact">
-			<header>
-				<h3>Понравился сайт?</h3>
-			</header>
-			<p>Свяжитесь со мной:</p>
-			<ul class="icons">
-				<li><a href="https://github.com/BondarchukS" class="icon fa-github"><span class="label"></span></a></li>
-				<li><a href="https://t.me/BondarchukSS" class="icon fa-telegram"><span class="label"></span></a></li>
-				<li><a href="tel:+79619313413"><span class="label"></span>Позвонить</a></li>
-			</ul>
-		</section>
-
-		<!-- Copyright -->
-		<div class="copyright">
-			<ul class="menu">
-				<li>&copy; ИДБ-18-02. All rights reserved.</li>
-				<li>Design by: Бондарчук Сергей на основе <a href="http://html5up.net">HTML5 UP</a></li>
-			</ul>
-		</div>
-
-	</div>
-
-	</div>
 	</div>
 	</div>
 
