--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 						<p>Проектирование и разработка индивидуального или коллективного веб-приложения с использованием html,css,js +
 							json,xml.
 							<p>1)Собрать команду для разработки веб-приложения (SPA) и распределить роли.
-								<p>2)Исходный код на index.html.
-									<p>3)Прописать стили страницы. Исходный код на css.
+								<p>2)Исходный код   <a href="https://github.com/BondarchukS/FB_LW2.github.io/blob/master/index.html">index.html</a></p>
+									<p>3)Прописать стили страницы. Исходный код на <a href="https://github.com/BondarchukS/FB_LW2.github.io/blob/master/index.html">css.</a>
 										<p>4)Прописать js функционал и реализовать возможность чтения json.Исходный код на js и json
 											<cite>Результат:<a>Готовый проект</a></cite>
 										</p>
