--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 								<p>2)Исходный код   <a href="https://github.com/BondarchukS/FB_LW2.github.io/blob/master/index.html">index.html</a></p>
 									<p>3)Прописать стили страницы. Исходный код на <a href="https://github.com/BondarchukS/FB_LW2.github.io/blob/master/index.html">css.</a>
 										<p>4)Прописать js функционал и реализовать возможность чтения json.Исходный код на js и json
-											<cite>Результат:<a href="https://bondarchuks.github.io/game.html">Готовый проект</a></cite>
+											<cite>Результат:<a href="https://bondarchuks.github.io/game/game.html">Готовый проект</a></cite>
 										</p>
 
 										<h3 id="L3" align=center>Лабораторная работа №3 "Настройка локальной сети передачи данных".</h2>
